--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-group-files": "^2.0.0",
     "gulp-ruby-sass": "^1.1.0"
   }
 }
