--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-group-files": "^2.0.0",
-    "gulp-ruby-sass": "^1.1.0"
+    "gulp-sass": "^2.0.4"
   }
 }
